Init a warmup endpoint that loads openfisca tbs
