# server/handlers/warmup.py
@@ -1,0 +1,6 @@
+from openfisca_france import FranceTaxBenefitSystem  # type: ignore
+
+class WarmUp(object):
+    def load_taxbenefits_system(**params: dict) -> tuple:
+        TBS = FranceTaxBenefitSystem()
+        return {"Status": "A chargé en mémoire OpenFisca-France vX"}, 200
